# webcat

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  data.dvc  models.dvc  pyproject.toml
.dvc/: config
dags/: k8s_test.py
k8s/: deployment.yaml  ingress.yaml  monitoring-webcat.yaml  prom_rbac.yaml  service.yaml  ubuntu.yaml
notebooks/: 1.0-pns-myip-content-classifier.ipynb  2.0-pns-myip-url-classifier.ipynb  3.0-kap-test-binary-classifier.ipynb  4.0-kap-block-checker.ipynb  5.0-kap-multiclassifier-preparing-dataset.ipynb  6.0-kap-ngram-multiclass-classifier.ipynb  7.0-kap-url-embed-multiclass-classifier.ipynb
service/: app.py  config.py  logger.py  models.py  utils.py
src/models/: serialize.py
tests/: test_app.py
