[tool.poetry]
name = "web-category"
version = "0.1.0"
description = "project for categorization web"
authors = ["Nikolay Prudkovskiy <n.prudkovskiy@bi.zone>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
httpx = "^0.24.1"
black = "^23.3.0"
pydantic = "^1.10.9"
urllib3 = "1.26"
fastapi = "^0.99.1"
dvc-s3 = "^2.23.0"
joblib = "^1.3.1"
prospector = "^1.10.2"
dvc = "^3.5.0"
sentence-transformers = "^2.2.2"
lightgbm = "^3.3.5"
aiocache = "^0.12.1"
nltk = "^3.8.1"
spacy = "^3.6.0"
bs4 = "^0.0.1"
torch = "^2.0.1"
uvicorn = "^0.22.0"
tldextract = "^3.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
